/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package model;

/**
 *
 * @author MERARI URBANO
 */
public class Book extends Material {

    /*
    *Constructor
    */
    public Book(String code, String title, String autor, String category, boolean available) {
        super(code, title, autor, category, available);
    }
}
