/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package model;

/**
 *
 * @author MERARI URBANO
 */
public class Thesis extends Material {

    /*
    *Constructor
    */
    public Thesis(String code, String title, String author, String category, boolean available) {
        super(code, title, author, category, available);
    }
}
